--- a/manifests/nginx/server.yml
+++ b/manifests/nginx/server.yml
@@ -3,11 +3,11 @@
 apiVersion: v1
 kind: Service
 metadata: 
-  name: nginx_svc
+  name: nginx-svc
 spec:
   type: NodePort
   ports:
-    - name: nginx_port
+    - name: nginx-port
       selector:
         name: nginx
       port: 80
