--- a/manifests/nginx/nginx.yml
+++ b/manifests/nginx/nginx.yml
@@ -1,22 +1,30 @@
 ---
 
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata: 
   name: nginx
   labels: 
     env: dev
 spec: 
-  containers:
-    - name: nginx
-      image: nginx:1.27
-      resources:
-        requests:
-          cpu: 100m
-          memory: 68Mi
-        limits:
-          cpu: 200m
-          memory: 128Mi
-      ports:
-        - containerPort: 80
-          name: nginx-port
+  replicas: 3
+  selector:
+    matchLabels:
+      app: nginx
+    template:
+      metadata:
+        labels: 
+          app: nginx
+    spec:
+      containers:
+        - name: nginx
+          image: nginx:1.27
+          resources:
+            requests:
+              cpu: 100m
+              memory: 68Mi
+            limits:
+              cpu: 200m
+              memory: 128Mi
+          ports:
+              - containerPort: 80
