--- a/my-repo/menifests/store/templates/deployment.yaml
+++ b/my-repo/menifests/store/templates/deployment.yaml
@@ -8,13 +8,14 @@ labels:
 spec:
   replicas: {{ .Values.replicas }}
   selector:
-  matchLabels:
-    app: {{ .Chart.Name }}
+    matchLabels:
+      app: {{ .Chart.Name }}
   template:
     metadata:
       labels:
         app: {{ .Chart.Name }}
   spec:
+    serviceAccountName: {{ .Chart.Name }}
     containers:
       - name: {{ .Chart.Name }} 
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
